# GOODScanner

./: .gitignore  CLAUDE.md  Cargo.toml  MANAGER_API.md  MANAGER_IMPLEMENTATION_GUIDE.md  README.md  README_EN.md  THIRD_PARTY_NOTICES.md  gen_roll_table.py  test_solver.py
.github/workflows/: rust.yml
application/: Cargo.toml  build.rs
application/src/gui/: capture_tab.rs  log_bridge.rs  log_panel.rs  manager_tab.rs  mod.rs  scanner_tab.rs  state.rs  update_banner.rs  widgets.rs  worker.rs
assets/: manifest.xml
docs/: MANAGER_API.md  capture_data_spec.md
genshin/: Cargo.toml
genshin/src/: cli.rs  lib.rs  server.rs  updater.rs
genshin/src/capture/: data_cache.rs  data_types.rs  mod.rs  monitor.rs  packet_capture.rs  player_data.rs
genshin/src/manager/: equip_manager.rs  lock_manager.rs  matching.rs  mod.rs  models.rs  orchestrator.rs  ui_actions.rs
genshin/src/scanner/: mod.rs
genshin/src/scanner/artifact/: config.rs  mod.rs  scanner.rs
genshin/src/scanner/character/: config.rs  mod.rs  scanner.rs
genshin/src/scanner/common/: backpack_scanner.rs  constants.rs  diff.rs  equip_parser.rs  fuzzy_match.rs  game_controller.rs  grid_voter.rs  mappings.rs  mod.rs  ocr_factory.rs  ocr_pool.rs  pixel_utils.rs  roll_solver.rs  roll_table.rs  scan_worker.rs  stat_parser.rs  test_utils.rs
genshin/src/scanner/weapon/: config.rs  scanner.rs
yas/: Cargo.toml
yas-application/: Cargo.toml
yas-genshin/: Cargo.toml
yas-genshin/src/application/: artifact_scanner.rs  good_scanner.rs  mod.rs
yas-genshin/src/artifact/: artifact.rs
yas-genshin/src/export/artifact/: good.rs  mingyu_lab.rs
yas-genshin/src/scanner/: mod.rs
yas-genshin/src/scanner/artifact_scanner/: artifact_scanner.rs  artifact_scanner_config.rs  artifact_scanner_worker.rs
yas-genshin/src/scanner/good_artifact_scanner/: config.rs  mod.rs  scanner.rs
yas-genshin/src/scanner/good_character_scanner/: config.rs  scanner.rs
yas-genshin/src/scanner/good_common/: backpack_scanner.rs  constants.rs  coord_scaler.rs  debug_dump.rs  fuzzy_match.rs  game_controller.rs  mappings.rs  mod.rs  models.rs  navigation.rs  ocr_factory.rs  pixel_utils.rs  roll_solver.rs  stat_parser.rs
yas-genshin/src/scanner/good_weapon_scanner/: config.rs  mod.rs  scanner.rs
yas/src/: cancel.rs  lang.rs  lib.rs
yas/src/capture/: stream_capturer.rs  winapi_capturer.rs
yas/src/game_info/os/: linux.rs  winodws.rs
yas/src/ocr/: traits.rs
yas/src/ocr/paddle_paddle_model/: model.rs  preprocess.rs
yas/src/ocr/yas_model/: yas_ocr_model.rs
yas/src/utils/: macos.rs  mod.rs  windows.rs
