[package]
name = "yas-application"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
yas = { path = "../yas" , package = "yas_core" }
yas_genshin = { path = "../genshin", package = "yas_scanner_genshin" }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
image = "0.24"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "GOODScanner"
path = "src/bin/yas.rs"

[[bin]]
name = "ocr_test"
path = "src/bin/ocr_test.rs"

[[bin]]
name = "ocr_eval"
path = "src/bin/ocr_eval.rs"
