[package]
name = "yas-application"
version = "0.1.0"
edition = "2021"

[lib]
test = false

[features]
default = []
dev-tools = []
capture = ["yas_genshin/capture", "dep:tokio"]

[dependencies]
anyhow = "1.0"
yas = { path = "../yas" , package = "yas_core" }
yas_genshin = { path = "../genshin", package = "yas_scanner_genshin" }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
enigo = "0.1"
image = "0.24"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = { version = "0.30", default-features = false, features = ["glow", "default_fonts"] }
rfd = "0.15"
tokio = { version = "1", features = ["sync"], optional = true }
rand = "0.8"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
]

[build-dependencies]
winres = "0.1"

[[bin]]
name = "GOODScanner"
path = "src/bin/yas.rs"
test = false

[[bin]]
name = "GOODCapture"
path = "src/bin/capture.rs"
required-features = ["capture"]

[[bin]]
name = "ocr_test"
path = "src/bin/ocr_test.rs"
required-features = ["dev-tools"]

[[bin]]
name = "ocr_eval"
path = "src/bin/ocr_eval.rs"
required-features = ["dev-tools"]

[[bin]]
name = "filter_debug"
path = "src/bin/filter_debug.rs"
required-features = ["dev-tools"]

[[bin]]
name = "set_filter_test"
path = "src/bin/set_filter_test.rs"
required-features = ["dev-tools"]

[[bin]]
name = "equip_replay"
path = "src/bin/equip_replay.rs"
required-features = ["dev-tools"]
