[package]
name = "yas_scanner_genshin"
version = "0.1.16"
edition = "2021"
description = "Genshin Impact item scanner"
repository = "https://github.com/wormtql/yas"
keywords = ["GenshinImpact", "artifacts", "scanner", "ocr"]
license = "GPL-2.0-or-later"

[dependencies]
yas = { path = "../yas", package = "yas_core", features = ["ort", "capturer_screenshots"] }
anyhow = "1.0"
log = "0.4"
clap = { version = "4.4", features = ["derive", "cargo"] }
image = "0.24"
serde_json = "1.0"
regex = "1.5"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
enigo = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
auto-artifactarium = { git = "https://github.com/konkers/auto-artifactarium", rev = "c5fa36b84e05ad0339fee8a0a420d26900b824b7" }
indexmap = "2"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
crossbeam-channel = "0.5"
rayon = "1.7"
indicatif = "0.17"
indicatif-log-bridge = "0.2"
zip = "2"
tiny_http = "0.12"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "=1.0.65"
pktmon = { version = "0.6", features = ["tokio"] }
futures = "0.3"
